example of html file

--- a/list_log.html
+++ b/list_log.html
@@ -1,17 +1,142 @@
 <pre>
 <details>list[0064FED4]
+list head is 0
+list tale is 0
+list size id 0
+list capacity id 2
+list free is 1
+list elems is [00C11600]
+idx[0]	 data [-559038737]	 next is [0]	 prev is [0]
+idx[1]	 data [-559038737]	 next is [0]	 prev is [-1]
+</details>
+<img src = dot1.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 0
+list tale is 0
+list size id 0
+list capacity id 2
+list free is 1
+list elems is [00C11600]
+idx[0]	 data [-559038737]	 next is [0]	 prev is [0]
+idx[1]	 data [-559038737]	 next is [0]	 prev is [-1]
+</details>
+<img src = dot2.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 1
+list tale is 1
+list size id 1
+list capacity id 2
+list free is 0
+list elems is [00C11600]
+idx[0]	 data [-559038737]	 next is [1]	 prev is [1]
+idx[1]	 data [10]	 next is [0]	 prev is [0]
+</details>
+<img src = dot3.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 1
+list tale is 1
+list size id 1
+list capacity id 2
+list free is 0
+list elems is [00C11600]
+idx[0]	 data [-559038737]	 next is [1]	 prev is [1]
+idx[1]	 data [10]	 next is [0]	 prev is [0]
+</details>
+<img src = dot4.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 1
+list tale is 2
+list size id 2
+list capacity id 4
+list free is 3
+list elems is [00C11640]
+idx[0]	 data [-559038737]	 next is [1]	 prev is [2]
+idx[1]	 data [10]	 next is [2]	 prev is [0]
+idx[2]	 data [20]	 next is [0]	 prev is [1]
+idx[3]	 data [-559038737]	 next is [0]	 prev is [-1]
+</details>
+<img src = dot5.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 1
+list tale is 2
+list size id 2
+list capacity id 4
+list free is 3
+list elems is [00C11640]
+idx[0]	 data [-559038737]	 next is [1]	 prev is [2]
+idx[1]	 data [10]	 next is [2]	 prev is [0]
+idx[2]	 data [20]	 next is [0]	 prev is [1]
+idx[3]	 data [-559038737]	 next is [0]	 prev is [-1]
+</details>
+<img src = dot6.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
+list head is 1
+list tale is 3
+list size id 3
+list capacity id 4
+list free is 0
+list elems is [00C11640]
+idx[0]	 data [-559038737]	 next is [1]	 prev is [3]
+idx[1]	 data [10]	 next is [2]	 prev is [0]
+idx[2]	 data [20]	 next is [3]	 prev is [1]
+idx[3]	 data [30]	 next is [0]	 prev is [2]
+</details>
+<img src = dot7.png>
+
+
+
+
+
+<pre>
+<details>list[0064FED4]
 list head is 1
 list tale is 14
 list size id 3
 list capacity id 4
 list free is 0
-list elems is [00C91600]
+list elems is [00C11640]
 idx[0]	 data [-559038737]	 next is [1]	 prev is [14]
 idx[1]	 data [10]	 next is [2]	 prev is [0]
 idx[2]	 data [20]	 next is [3]	 prev is [1]
 idx[3]	 data [30]	 next is [0]	 prev is [2]
 </details>
-<img src = dot1.png>
+<img src = dot8.png>
 next element of previous is not equal to original
 
 
@@ -24,7 +149,7 @@ list tale is 4
 list size id 4
 list capacity id 8
 list free is 5
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [1]	 prev is [4]
 idx[1]	 data [10]	 next is [2]	 prev is [0]
 idx[2]	 data [20]	 next is [3]	 prev is [1]
@@ -34,7 +159,7 @@ idx[5]	 data [-559038737]	 next is [6]	 prev is [-1]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot2.png>
+<img src = dot9.png>
 next element of previous is not equal to original
 
 
@@ -47,7 +172,7 @@ list tale is 4
 list size id 4
 list capacity id 8
 list free is 5
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [1]	 prev is [4]
 idx[1]	 data [10]	 next is [2]	 prev is [0]
 idx[2]	 data [20]	 next is [3]	 prev is [1]
@@ -57,7 +182,7 @@ idx[5]	 data [-559038737]	 next is [6]	 prev is [-1]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot3.png>
+<img src = dot10.png>
 next element of previous is not equal to original
 
 
@@ -70,7 +195,7 @@ list tale is 4
 list size id 5
 list capacity id 8
 list free is 6
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [5]	 prev is [4]
 idx[1]	 data [10]	 next is [2]	 prev is [5]
 idx[2]	 data [20]	 next is [3]	 prev is [1]
@@ -80,7 +205,7 @@ idx[5]	 data [99]	 next is [1]	 prev is [0]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot4.png>
+<img src = dot11.png>
 next element of previous is not equal to original
 
 
@@ -93,7 +218,7 @@ list tale is 4
 list size id 5
 list capacity id 8
 list free is 6
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [5]	 prev is [4]
 idx[1]	 data [10]	 next is [2]	 prev is [5]
 idx[2]	 data [20]	 next is [3]	 prev is [1]
@@ -103,7 +228,7 @@ idx[5]	 data [99]	 next is [1]	 prev is [0]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot5.png>
+<img src = dot12.png>
 next element of previous is not equal to original
 
 
@@ -116,7 +241,7 @@ list tale is 4
 list size id 4
 list capacity id 8
 list free is 1
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [5]	 prev is [4]
 idx[1]	 data [-559038737]	 next is [6]	 prev is [-1]
 idx[2]	 data [20]	 next is [3]	 prev is [5]
@@ -126,7 +251,7 @@ idx[5]	 data [99]	 next is [2]	 prev is [0]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot6.png>
+<img src = dot13.png>
 next element of previous is not equal to original
 
 
@@ -139,7 +264,7 @@ list tale is 4
 list size id 4
 list capacity id 8
 list free is 1
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [5]	 prev is [4]
 idx[1]	 data [-559038737]	 next is [6]	 prev is [-1]
 idx[2]	 data [20]	 next is [3]	 prev is [5]
@@ -149,7 +274,7 @@ idx[5]	 data [99]	 next is [2]	 prev is [0]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot7.png>
+<img src = dot14.png>
 next element of previous is not equal to original
 
 
@@ -162,7 +287,7 @@ list tale is 4
 list size id 3
 list capacity id 8
 list free is 2
-list elems is [00C94330]
+list elems is [00C14330]
 idx[0]	 data [-559038737]	 next is [5]	 prev is [4]
 idx[1]	 data [-559038737]	 next is [6]	 prev is [-1]
 idx[2]	 data [-559038737]	 next is [1]	 prev is [-1]
@@ -172,7 +297,7 @@ idx[5]	 data [99]	 next is [3]	 prev is [0]
 idx[6]	 data [-559038737]	 next is [7]	 prev is [-1]
 idx[7]	 data [-559038737]	 next is [0]	 prev is [-1]
 </details>
-<img src = dot8.png>
+<img src = dot15.png>
 next element of previous is not equal to original
 
 
